note hit on opponent side

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,17 @@
     "cmake.configureOnOpen": true,
     "files.associations": {
         "*.mc": "haxe",
-        "stagedef_disc1.h": "c"
+        "stagedef_disc1.h": "c",
+        "array": "c",
+        "compare": "c",
+        "functional": "c",
+        "memory": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "utility": "c",
+        "xmemory": "c",
+        "xstring": "c",
+        "xtr1common": "c",
+        "xutility": "c"
     }
 }
