--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
         "xstring": "c",
         "xtr1common": "c",
         "xutility": "c",
-        "random.h": "c"
+        "random.h": "c",
+        "system_error": "c",
+        "xlocnum": "c"
     }
 }
